made about page

--- a/index.html
+++ b/index.html
@@ -28,16 +28,8 @@
         <h2>Links</h2>
         &emsp;&emsp;<a href="https://www.youtube.com/channel/UCATqFRa7-T4BcqqNnW_TBfw/featured">YouTube</a> <br> <br>
         &emsp;&emsp;<a href="https://github.com/svgaming234">GitHub</a> <br> <br>
-        &emsp;&emsp;<a href="https://softjsk.github.io/">The SoftJSK website</a> <br> <br>
-    </div>
-    <img id= "jsklogo" src="images/favicon.png" alt="svicon">
-    <div id="about">
-        <h3>
-            Website developed by and <a style="font-size : 10px" href="https://github.com/SvGaming234">SvGaming</a>, 2022. <br>
-            Based on the SoftJSK website me and my friend made. <br>
-            Hosted on GitHub Pages. <br>
-            <a style="font-size : 10px" href="https://github.com/SoftJSK">GitHub Organization</a>
-        </h3>
+        &emsp;&emsp;<a href="https://softjsk.github.io/">The SoftJSK website</a> <br> <br> <br> <br>
+        &emsp;&emsp;<a href="sites/about.html">About</a> <br> <br>
     </div>
 </body>
 </html>
