minor title change

--- a/sites/about.html
+++ b/sites/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Sv's Site - About and credits</title>
+	<title>SvGaming's website - About and credits</title>
 	<link rel="stylesheet" type="text/css" href="../ss.css">
 	<link rel="icon" type="image/x-icon" href="../images/favicon.png">
 </head>
