--- a/index.html
+++ b/index.html
@@ -11,25 +11,54 @@
         <h1><b><mark class="red">SvGaming</mark>'s website</b></h1>
     </header>
     <br>
-    <div id="news">
+    <div style="margin-left: 0px;" id="news">
         <h2>News<h2>
         <p>
-            SvGaming, 31.5.2022 <br>
+            SvGaming, 6/7/2022 <br>
+            Made lots of changes to the site today.  <br>
+        </p>
+        <p>
+            SvGaming, 5/31/2022 <br>
             This website was created today. <br>
             <br>
             No other news yet... <br>
         </p>
     </div>
+    <div id="news">
+        <h2>About me: <h2>
+        <p>
+            Hi! I am SvGaming. <br>
+            I like to code and I am interested in computers. <br>
+            I commonly code with my friend Erik(aarc) in out GitHub organisation called SoftJSK. <br>
+            I code in C, HTML and CSS and Python. I also know how to write Bash and Batch scripts. <br>
+            I know some stuff about electronics and I build computers. <br>
+            I use GNU/Linux.
+        </p>
+        <img style="max-height: 100px;" id= "jsklogo" src="images/favicon.png" alt="svicon">
+    </div>
     <div id="links">
-        <h2>Cool stuff</h2>
-        &emsp;&emsp;<a href="sites/guides.html">Guides</a> <br> <br>
-        &emsp;&emsp;<a href="sites/projects.html">Projects</a> <br> <br>
-        &emsp;&emsp;<a href="sites/usragent.html">User Agent Detector</a> <br> <br>
-        <h2>Links</h2>
-        &emsp;&emsp;<a href="https://www.youtube.com/channel/UCATqFRa7-T4BcqqNnW_TBfw/featured">YouTube</a> <br> <br>
-        &emsp;&emsp;<a href="https://github.com/svgaming234">GitHub</a> <br> <br>
-        &emsp;&emsp;<a href="https://softjsk.github.io/">The SoftJSK website</a> <br> <br> <br> <br>
-        &emsp;&emsp;<a href="sites/about.html">About</a> <br> <br>
+        <br> <br>
+        <details>
+            <summary>Cool stuff</summary>
+            <br>
+            &emsp;&emsp;<a href="sites/projects.html">Projects</a> <br> <br>
+            &emsp;&emsp;<a href="sites/usragent.html">User Agent Detector</a> <br> <br>
+        </details>
+        <br> <br>
+        <details>
+            <summary>Links</summary>
+            <br>
+            &emsp;&emsp;<a href="https://www.youtube.com/channel/UCATqFRa7-T4BcqqNnW_TBfw/featured">YouTube</a> <br> <br>
+            &emsp;&emsp;<a href="https://github.com/svgaming234">GitHub</a> <br> <br>
+            &emsp;&emsp;<a href="https://softjsk.github.io/">The SoftJSK website</a> <br> <br>
+        </details>
+        <br> <br>
+        <details>
+            <summary>Guides</summary>
+            <h4>Nothing here yet...</h4>
+        </details>
+        <br> <br>
+        &emsp;&emsp;<a href="sites/about.html">About website</a>
     </div>
 </body>
 </html>
