--- a/sites/guides.html
+++ b/sites/guides.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Sv's Site - Guides</title>
-	<link rel="stylesheet" type="text/css" href="ssm.css">
+	<title>SvGaming's website - Guides</title>
+	<link rel="stylesheet" type="text/css" href="../ss.css">
 	<link rel="icon" type="image/x-icon" href="../img/favicon.png">
 </head>
 <body>
@@ -10,6 +10,6 @@
 	<br>
 	<br>
 	<p>Hello! Here are some of my guides:</p>
-	<a href="obsguide.html">How to set up OBS studio for recording</a>
+	<a href="guides/obsguide.html">How to set up OBS studio for recording</a>
 </body>
 </html>
