--- a/sites/projects.html
+++ b/sites/projects.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Sv's Site - Projects</title>
-	<link rel="stylesheet" type="text/css" href="ssm.css">
+	<link rel="stylesheet" type="text/css" href="../ss.css">
 	<link rel="icon" type="image/x-icon" href="../img/favicon.png">
 </head>
 <body>
