--- a/sites/usragent.html
+++ b/sites/usragent.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Sv's Site - User Agent Detector</title>
-	<link rel="stylesheet" type="text/css" href="ssm.css">
-	<link rel="icon" type="image/x-icon" href="../img/favicon.png">
+	<title>SvGaming's website - User Agent Detector</title>
+	<link rel="stylesheet" type="text/css" href="../ss.css">
+	<link rel="icon" type="image/x-icon" href="../images/favicon.png">
 </head>
 <body>
 	<h1 id= "hsuhdr"><b>User Agent Detector</b></h1>	<a href="../index.html">Back</a>
