--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             I commonly code with my friend Erik(aarc) in out GitHub organisation called SoftJSK. <br>
             I code in C, HTML and CSS and Python. I also know how to write Bash and Batch scripts. <br>
             I know some stuff about electronics and I build computers. <br>
-            I use GNU/Linux.
+            <a style="font-size: 24px" href="https://www.reddit.com/r/copypasta/comments/63oudw/gnu_linux/?utm_source=share&utm_medium=web2x&context=3">I use GNU/Linux.</a> <br>
         </p>
         <img style="max-height: 100px;" id= "jsklogo" src="images/favicon.png" alt="svicon">
     </div>
