added mobile device detection

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>SvGaming's website - Home</title>
 	<link rel="stylesheet" type="text/css" href="ss.css">
 	<link rel="icon" type="image/x-icon" href="images/favicon.png">
+    <script type="text/javascript" src="script.js"></script>
 </head>
 
 <body>
