--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
         <br> <br>
         <details>
             <summary>Guides</summary>
-            <h4>Nothing here yet...</h4>
+            <br>
+            &emsp;&emsp;<a href="sites/guides/obsguide.html">OBS Studio Setup</a> <br> <br>
         </details>
         <br> <br>
         &emsp;&emsp;<a href="sites/about.html">About website</a>
