made better article view

--- a/sites/guides/obsguide.html
+++ b/sites/guides/obsguide.html
@@ -4,6 +4,7 @@
 	<title>Sv's Site - How to set up OBS studio for recording</title>
 	<link rel="stylesheet" type="text/css" href="../../ss.css">
 	<link rel="icon" type="image/x-icon" href="../../images/favicon.png">
+    <script type="text/javascript" src="script.js"></script>
 </head>
 <body>
 	<h1 id= "hsuhdr"><b>How to set up OBS studio for recording</b></h1>	
