removed legacy components, added better mobile vew for user agent detection

--- a/sites/usragent.html
+++ b/sites/usragent.html
@@ -4,6 +4,7 @@
 	<title>SvGaming's website - User Agent Detector</title>
 	<link rel="stylesheet" type="text/css" href="../ss.css">
 	<link rel="icon" type="image/x-icon" href="../images/favicon.png">
+	<script type="text/javascript" src="script.js"></script>
 </head>
 <body>
 	<h1 id= "hsuhdr"><b>User Agent Detector</b></h1>	<a href="../index.html">Back</a>
