fixed minor typo

--- a/sites/guides/obsguide.html
+++ b/sites/guides/obsguide.html
@@ -47,7 +47,7 @@
         I recommend leaving all the settings at deafult, and clicking OK, if you only have 1 monitor. <br>
         If you have more than 1 monitor, you can select which monitor you would like to capture here. <br>
         After that, you should be ready for some basic recording! <br>
-        If you don't want to be heard in your video, press the icon shown in the image below to mute your microfone. <br>
+        If you don't want to be heard in your video, press the icon shown in the image below to mute your microphone. <br>
         <img id= "obsimg" src="../../images/guides/obsimg/obsimg10.png" alt="obsimg10"> <br>
         To start or stop recording, press the "Start Recording" or "Stop Recording" buttons of course. <br>
         To view your recordings go to File > Show recordings. <br>
