bug fixes and code improvements

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <h1><b><mark class="red">SvGaming</mark>'s website</b></h1>
     </header>
     <br>
-    <div style="margin-left: 0px;" id="news">
-        <h2>News<h2>
-        <p>
+    <div style="margin-left: 0px;" class="news">
+        <h2>News</h2>
+        <h5>
             SvGaming, 6/7/2022 <br>
             Made lots of changes to the site today.  <br>
         </p>
@@ -25,16 +25,16 @@
             No other news yet... <br>
         </p>
     </div>
-    <div id="news">
-        <h2>About me: <h2>
-        <p>
+    <div class="news">
+        <h2>About me: </h2>
+        <h5>
             Hi! I am SvGaming. <br>
             I like to code and I am interested in computers. <br>
             I commonly code with my friend Erik(aarc) in our <a style="font-size: 24px" href="https://github.com/SoftJSK">GitHub organisation</a> called SoftJSK. <br>
             I code in C, HTML, CSS and Python. I also know how to write Bash and Batch scripts. <br>
             I know some stuff about electronics and I build computers. <br>
             <a style="font-size: 24px" href="https://www.reddit.com/r/copypasta/comments/63oudw/gnu_linux/?utm_source=share&utm_medium=web2x&context=3">I use GNU/Linux.</a> <br>
-        </p>
+        </h5>
         <img style="max-height: 100px;" id= "jsklogo" src="images/favicon.png" alt="svicon">
     </div>
     <div id="links">
