tons of small fixes

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="utf-8">
     <title>SvGaming's website - Home</title>
 	<link rel="stylesheet" type="text/css" href="ss.css">
 	<link rel="icon" type="image/x-icon" href="images/favicon.png">
-    <script type="text/javascript" src="script.js"></script>
+    <script src="script.js"></script>
 </head>
 
 <body>
@@ -17,13 +18,12 @@
         <h5>
             SvGaming, 6/7/2022 <br>
             Made lots of changes to the site today.  <br>
-        </p>
-        <p>
+            <br>
             SvGaming, 5/31/2022 <br>
             This website was created today. <br>
             <br>
             No other news yet... <br>
-        </p>
+        </h5>
     </div>
     <div class="news">
         <h2>About me: </h2>
