--- a/sites/about.html
+++ b/sites/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="utf-8">
 	<title>SvGaming's website - About and credits</title>
 	<link rel="stylesheet" type="text/css" href="../ss.css">
 	<link rel="icon" type="image/x-icon" href="../images/favicon.png">
