--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             Hi! I am SvGaming. <br>
             I like to code and I am interested in computers. <br>
             I commonly code with my friend Erik(aarc) in our <a style="font-size: 24px" href="https://github.com/SoftJSK">GitHub organisation</a> called SoftJSK. <br>
-            I code in C, HTML, CSS and Python. I also know how to write Bash and Batch scripts. <br>
+            I code in C, C++, HTML, CSS and Python. I also know how to write Bash and Batch scripts. <br>
             I know some stuff about electronics and I build computers. <br>
             <a style="font-size: 24px" href="https://www.reddit.com/r/copypasta/comments/63oudw/gnu_linux/?utm_source=share&utm_medium=web2x&context=3">I use GNU/Linux.</a> <br>
         </h5>
