--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             <summary>Guides</summary>
             <br>
             &emsp;&emsp;<a href="sites/guides/obsguide.html">OBS Studio Setup</a> <br> <br>
+            &emsp;&emsp;<a href="sites/guides/git.html">Git Basics</a> <br> <br>
         </details>
         <br> <br>
         &emsp;&emsp;<a href="sites/about.html">About website</a>
