--- a/sites/guides/obsguide.html
+++ b/sites/guides/obsguide.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-	<title>Sv's Site - How to set up OBS studio for recording</title>
+	<title>SvGaming's website - How to set up OBS studio for recording</title>
 	<link rel="stylesheet" type="text/css" href="../../ss.css">
 	<link rel="icon" type="image/x-icon" href="../../images/favicon.png">
     <script src="script.js"></script>
