tiny guide back button change

--- a/sites/guides/git.html
+++ b/sites/guides/git.html
@@ -26,7 +26,7 @@
         git add . <br> git commit -m "*summary of changes*" <br> git push origin *branch name* <br> A deafult branch name is most likely master or main. <br>
         Made any changes on another computer? Type git pull to pull the changes onto your computer. <br>
         Thanks for following my tutorial! I might continue the tutorial and explain how to merge changes. <br>
-        <a href="../../index.html">Back</a>
+        <br> <a href="../../index.html">Back</a>
         </h5>
     </div>
 </body>
