--- a/sites/guides/obsguide.html
+++ b/sites/guides/obsguide.html
@@ -11,7 +11,7 @@
 	<h1 id= "hsuhdr"><b>How to set up OBS studio for recording</b></h1>	
     <div class="center">
         <h5>
-        <a href="../../index.html">Back</a> <br>
+        <a href="../../index.html">Back</a> <br> <br>
         Hello! In this guide i will be showing you how to set up OBS studio for recording. <br>
         Step 1: Installing OBS studio <br>
         To start using OBS studio, you of course have to install it first. <br>
@@ -53,7 +53,7 @@
         To start or stop recording, press the "Start Recording" or "Stop Recording" buttons of course. <br>
         To view your recordings go to File > Show recordings. <br>
         That's about it for this tutorial for now! I may add instrtuctions on how to set up your webcam in OBS later. Bye! <br>
-        <a href="../../index.html">Back</a>
+        <br> <a href="../../index.html">Back</a>
         </h5>
     </div>
 </body>
