--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
             <br>
             &emsp;&emsp;<a href="sites/guides/obsguide.html">OBS Studio Setup</a> <br> <br>
             &emsp;&emsp;<a href="sites/guides/git.html">Git Basics</a> <br> <br>
+            &emsp;&emsp;<a href="sites/guides/ossprogs.html">Useful less known GNU/Linux FOSS (free and open source software) </a> <br> <br>
         </details>
         <br> <br>
         &emsp;&emsp;<a href="sites/about.html">About website</a>
