added mc server page

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             <summary>Cool stuff</summary>
             <br>
             &emsp;&emsp;<a href="sites/usragent.html">User Agent Detector</a> <br> <br>
+            &emsp;&emsp;<a href="sites/mcserver.html">My Minecraft server</a> <br> <br>
         </details>
         <br> <br>
         <details>
