minecraft server page improvements

--- a/sites/mcserver.html
+++ b/sites/mcserver.html
@@ -28,6 +28,13 @@
         Need help? Most people on the server are super helpful and friendly. <br>
         <br> No griefing <br> <br>
         The server is strongly protected against griefing using password and grief prevention plugins. <br>
+        <br> Server screenshots <br> <br>
+        Spawn <br> <br>
+        <img class="obsimg" src="../images/mcserver/servershot.png" alt="serverimg"> <br> <br>
+        Renovated village <br> <br>
+        <img class="obsimg" src="../images/mcserver/servershot2.png" alt="serverimg2"> <br> <br>
+        Nether AFK XP Farm <br> <br>
+        <img class="obsimg" src="../images/mcserver/servershot3.png" alt="serverimg3"> <br> <br>
         <br> <a href="../../index.html">Back</a>
         </h5>
     </div>
