added gitforest announcements

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <div style="margin-left: 0px;" class="news">
         <h2>News</h2>
         <h5>
+            SvGaming, 8/17/2022 <br>
+            I have a custom Git server called "GitForest" now! <br>
+            Check it out: <a href="http://person-stages.at.playit.gg:42126/">GitForest</a> <br>
+            <br>
             SvGaming, 6/7/2022 <br>
             Made lots of changes to the site today.  <br>
             <br>
@@ -30,7 +34,7 @@
         <h5>
             Hi! I am SvGaming. <br>
             I like to code and I am interested in computers. <br>
-            I commonly code with my friend Erik(aarc) in our <a style="font-size: 24px" href="https://github.com/SoftJSK">GitHub organisation</a> called SoftJSK. <br>
+            I commonly code with my friend Erik (musculus) in our <a style="font-size: 24px" href="https://github.com/SoftJSK">GitHub organisation</a> called SoftJSK. <br>
             I code in C, C++, HTML, CSS and Python. I also know how to write Bash and Batch scripts. <br>
             I know some stuff about electronics and I build computers. <br>
             <a style="font-size: 24px" href="https://www.reddit.com/r/copypasta/comments/63oudw/gnu_linux/?utm_source=share&utm_medium=web2x&context=3">I use GNU/Linux.</a> <br>
@@ -49,6 +53,7 @@
         <details>
             <summary>Links</summary>
             <br>
+            &emsp;&emsp;<a href="http://person-stages.at.playit.gg:42126/">GitForest</a> <br> <br>
             &emsp;&emsp;<a href="https://www.youtube.com/channel/UCATqFRa7-T4BcqqNnW_TBfw/featured">YouTube</a> <br> <br>
             &emsp;&emsp;<a href="https://github.com/svgaming234">GitHub</a> <br> <br>
             &emsp;&emsp;<a href="https://matrix.to/#/@svgaming:matrix.org">Matrix</a> <br> <br>
