hardware upgrade news

--- a/index.html
+++ b/index.html
@@ -16,14 +16,17 @@
     <div style="margin-left: 0px;" class="news">
         <h2>News</h2>
         <h5>
-            SvGaming, 8/17/2022 <br>
+            SvGaming, 09/02/2022 <br>
+            Just did a big server hardware upgrade! <br>
+            <br>
+            SvGaming, 08/17/2022 <br>
             I have a custom Git server called "GitForest" now! <br>
             Check it out: <a href="http://person-stages.at.playit.gg:42126/">GitForest</a> <br>
             <br>
-            SvGaming, 6/7/2022 <br>
+            SvGaming, 06/07/2022 <br>
             Made lots of changes to the site today.  <br>
             <br>
-            SvGaming, 5/31/2022 <br>
+            SvGaming, 05/31/2022 <br>
             This website was created today. <br>
             <br>
             No other news yet... <br>
