--- a/sites/mcserver.html
+++ b/sites/mcserver.html
@@ -23,7 +23,7 @@
         Don't worry! No one can log in as your usename. The server is protected using a password plugin. <br>
         <br> Self hosting <br> <br>
         <img class="obsimg" src="../images/mcserver/neofetch.png" alt="neofetchimg"> <br>
-        I host the server on an old laptop using Debian Linux. Don't worry, the TPS is fine! <br>
+        I host the server on an older computer using Debian Linux. Don't worry, the TPS is fine! <br>
         <br> Friendly and helpful community <br> <br>
         Need help? Most people on the server are super helpful and friendly. <br>
         <br> No griefing <br> <br>
