foss guide improvement

--- a/sites/guides/ossprogs.html
+++ b/sites/guides/ossprogs.html
@@ -16,12 +16,10 @@
         <img class="gitimg" src="../../images/guides/ossprogs/osslogo.png" alt="ossimg"> <br> <br>
         Hello everyone! Today I will be showing you my favorite free and open source software which is less known and is compatible with GNU/Linux operating systems. <br>
         These are not sorted in any particular order. <br>
-        <br> 1. Code - OSS <br> <br>
-        <img class="obsimg" src="../../images/guides/ossprogs/codeoss.png" alt="codeossimg"> <br>
+        <br> 1. VSCodium <br> <br>
+        <img class="obsimg" src="../../images/guides/ossprogs/vscodium.png" alt="codiumimg"> <br>
         Code - OSS is a VSCode based editor which removes all Microsoft telemetry while keeping all important functionality. <br>
-        Fun fact: This website and most of my projects are written in this code editor. <br>
-        It is available on Flathub and Arch repositores as far as I know, but there are probably more ways of getting it. <br>
-        <a href="https://flathub.org/apps/details/com.visualstudio.code-oss">Flathub page</a> <br>
+        <a href="https://vscodium.com/">Website</a> <br>
         <br> 2. K3b <br> <br>
         <img class="obsimg" src="../../images/guides/ossprogs/k3b.png" alt="k3bimg"> <br>
         K3b is a very good utility for burning, ripping and doing all kinds of things with optical media made by KDE. <br>
