improved ossprogs guide

--- a/sites/guides/ossprogs.html
+++ b/sites/guides/ossprogs.html
@@ -18,7 +18,7 @@
         These are not sorted in any particular order. <br>
         <br> 1. VSCodium <br> <br>
         <img class="obsimg" src="../../images/guides/ossprogs/vscodium.png" alt="codiumimg"> <br>
-        Code - OSS is a VSCode based editor which removes all Microsoft telemetry while keeping all important functionality. <br>
+        VSCodium is a VSCode based editor which removes all Microsoft telemetry while keeping all important functionality. <br>
         <a href="https://vscodium.com/">Website</a> <br>
         <br> 2. K3b <br> <br>
         <img class="obsimg" src="../../images/guides/ossprogs/k3b.png" alt="k3bimg"> <br>
@@ -37,6 +37,10 @@
         <img class="obsimg" src="../../images/guides/ossprogs/nheko.png" alt="nhekoimg"> <br>
         nheko is an advanced and super customizable client for the chat platform called Matrix. <br>
         It currently lacks a bit of polish but if you are an advanced user and you don't mind it, I highly recommend it. <br>
+        <a href="https://nheko-reborn.github.io/">Website</a> <br>
+        <br> 6. VLC <br> <br>
+        <img class="obsimg" src="../../images/guides/ossprogs/vlc.png" alt="vlcimg"> <br>
+        VLC Media Player is an open source and customizable media player. It runs pretty much everywhere and plays pretty much every media file. <br>
         <a href="https://nheko-reborn.github.io/">Website</a> <br>
         <br> <a href="../../index.html">Back</a>
         </h5>
