--- a/sites/guides/ossprogs.html
+++ b/sites/guides/ossprogs.html
@@ -41,7 +41,7 @@
         <br> 6. VLC <br> <br>
         <img class="obsimg" src="../../images/guides/ossprogs/vlc.png" alt="vlcimg"> <br>
         VLC Media Player is an open source and customizable media player. It runs pretty much everywhere and plays pretty much every media file. <br>
-        <a href="https://nheko-reborn.github.io/">Website</a> <br>
+        <a href="https://www.videolan.org/vlc/">Website</a> <br>
         <br> <a href="../../index.html">Back</a>
         </h5>
     </div>
