--- a/index.html
+++ b/index.html
@@ -9,70 +9,7 @@
 </head>
 
 <body>
-    <header class=ribbon>
-        <h1><b><mark class="red">SvGaming</mark>'s website</b></h1>
-    </header>
-    <br>
-    <div style="margin-left: 0px;" class="news">
-        <h2>News</h2>
-        <h5>
-            SvGaming, 09/02/2022 <br>
-            Just did a big server hardware upgrade! <br>
-            <br>
-            SvGaming, 08/17/2022 <br>
-            I have a custom Git server called "GitForest" now! <br>
-            Check it out: <a href="http://person-stages.at.playit.gg:42126/">GitForest</a> <br>
-            <br>
-            SvGaming, 06/07/2022 <br>
-            Made lots of changes to the site today.  <br>
-            <br>
-            SvGaming, 05/31/2022 <br>
-            This website was created today. <br>
-            <br>
-            No other news yet... <br>
-        </h5>
-    </div>
-    <div class="news">
-        <h2>About me: </h2>
-        <h5>
-            Hi! I am SvGaming. <br>
-            I like to code and I am interested in computers. <br>
-            I commonly code with my friend Erik (musculus) in our <a style="font-size: 24px" href="https://github.com/SoftJSK">GitHub organisation</a> called SoftJSK. <br>
-            I code in C, C++, HTML, CSS and Python. I also know how to write Bash and Batch scripts. <br>
-            I know some stuff about electronics and I build computers. <br>
-            <a style="font-size: 24px" href="https://www.reddit.com/r/copypasta/comments/63oudw/gnu_linux/?utm_source=share&utm_medium=web2x&context=3">I use GNU/Linux.</a> <br>
-        </h5>
-        <img style="max-height: 100px;" id= "jsklogo" src="images/favicon.png" alt="svicon">
-    </div>
-    <div id="links">
-        <br> <br>
-        <details>
-            <summary>Cool stuff</summary>
-            <br>
-            &emsp;&emsp;<a href="sites/usragent.html">User Agent Detector</a> <br> <br>
-            &emsp;&emsp;<a href="sites/mcserver.html">My Minecraft server</a> <br> <br>
-        </details>
-        <br> <br>
-        <details>
-            <summary>Links</summary>
-            <br>
-            &emsp;&emsp;<a href="http://person-stages.at.playit.gg:42126/">GitForest</a> <br> <br>
-            &emsp;&emsp;<a href="https://www.youtube.com/channel/UCATqFRa7-T4BcqqNnW_TBfw/featured">YouTube</a> <br> <br>
-            &emsp;&emsp;<a href="https://github.com/svgaming234">GitHub</a> <br> <br>
-            &emsp;&emsp;<a href="https://matrix.to/#/@svgaming:matrix.org">Matrix</a> <br> <br>
-            &emsp;&emsp;<a href="https://softjsk.github.io/">The SoftJSK website</a> <br> <br>
-            &emsp;&emsp;<a href="https://matrix.to/#/#softjsk:matrix.org">SoftJSK Matrix room</a> <br> <br>
-        </details>
-        <br> <br>
-        <details>
-            <summary>Guides</summary>
-            <br>
-            &emsp;&emsp;<a href="sites/guides/obsguide.html">OBS Studio Setup</a> <br> <br>
-            &emsp;&emsp;<a href="sites/guides/git.html">Git Basics</a> <br> <br>
-            &emsp;&emsp;<a href="sites/guides/ossprogs.html">Useful less known GNU/Linux FOSS (free and open source software) </a> <br> <br>
-        </details>
-        <br> <br>
-        &emsp;&emsp;<a href="sites/about.html">About website</a>
-    </div>
+        <h1><b>This website has moved. <br>It is now self-hosted on this address: <br></b></h1>
+        <b><a href="http://game-themselves.at.ply.gg:38817/">http://game-themselves.at.ply.gg:38817/</a></b>
 </body>
 </html>
