--- a/sites/mcserver.html
+++ b/sites/mcserver.html
@@ -13,17 +13,17 @@
         <h5>
         <a href="../../index.html">Back</a> <br> <br>
         IP: like-freeze.at.playit.gg:42125 (I route the server through playit so no one can get my public IP) <br>
-        Version: 1.8.8 / 1.8.9 <br> <br>
+        Version: 1.8+ (1.8.9 recommended) <br> <br>
         SvGaming's SMP is my SMP Minecraft server. <br> <br>
         <img class="obsimg" src="../images/mcserver/servershot.png" alt="serverimg"> <br> <br>
         Why should I join? <br> <br>
         Everyone can join! <br> <br>
-        New players are always invited. Anyone with a Minecraft Java 1.8.9 installation can join. <br>
+        New players are always invited. Anyone with a Minecraft Java 1.8+ installation can join. <br>
         In the server configuration file online-mode is set to false. This means the server is "cracked". <br>
         Don't worry! No one can log in as your usename. The server is protected using a password plugin. <br>
         <br> Self hosting <br> <br>
         <img class="obsimg" src="../images/mcserver/neofetch.png" alt="neofetchimg"> <br>
-        I host the server on an older computer using Debian Linux. Don't worry, the TPS is fine! <br>
+        I host the server on an older computer using Ubuntu Server. Don't worry, the TPS is fine! <br>
         <br> Friendly and helpful community <br> <br>
         Need help? Most people on the server are super helpful and friendly. <br>
         <br> No griefing <br> <br>
