added new website link

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 
 <body>
         <h1><b>This website has moved. <br>It is now self-hosted on this address: <br></b></h1>
-        <b><a href="http://game-themselves.at.ply.gg:38817/">http://game-themselves.at.ply.gg:38817/</a></b>
+        <b><a href="https://svgaming.loca.lt">https://svgaming.loca.lt</a></b>
 </body>
 </html>
