removed old files

--- a/404.html
+++ b/404.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
-    <title>404</title>
-    <link rel="stylesheet" type="text/css" href="ss.css">
-    <link rel="icon" type="image/x-icon" href="images/favicon.png">
-  </head>
-  <body>
-    <h1>404</h1>
-    <div id="error">
-      <p style="text-align: center;">Page not found.</p>
-      <a style="text-align: center;" href="index.html">Go back to the main page</a>
-    </div>
-  </body>
+    <title>SvGaming's website - Home</title>
+	<link rel="stylesheet" type="text/css" href="ss.css">
+	<link rel="icon" type="image/x-icon" href="images/favicon.png">
+    <script src="script.js"></script>
+</head>
+
+<body>
+        <h1><b>This website has moved. <br>It is now self-hosted on this address: <br></b></h1>
+        <b><a href="http://game-themselves.at.ply.gg:38817/">http://game-themselves.at.ply.gg:38817/</a></b>
+</body>
 </html>
