--- a/index.html
+++ b/index.html
@@ -2,10 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>SvGaming's website - Home</title>
+    <title>SvGaming's website - Website moved</title>
 	<link rel="stylesheet" type="text/css" href="ss.css">
-	<link rel="icon" type="image/x-icon" href="images/favicon.png">
-    <script src="script.js"></script>
 </head>
 
 <body>
