--- a/404.html
+++ b/404.html
@@ -8,6 +8,6 @@
 
 <body>
         <h1><b>This website has moved. <br>It is now self-hosted on this address: <br></b></h1>
-        <b><a href="https://svgaming.loca.lt">https://svgaming.loca.lt</a></b>
+        <b><a href="https://svgaming.serveo.net">https://svgaming.serveo.net</a></b>
 </body>
 </html>
